--- a/sa-token-doc/doc.html
+++ b/sa-token-doc/doc.html
@@ -18,7 +18,7 @@
 					<div class="logo-box">
 						<img src="logo.png" title="logo" />
 						<h1 class="logo-text">Sa-Token</h1>
-						<sub>v1.33.0-jakarta</sub>
+						<sub>v1.33.0-jakarta-SNAPSHOT</sub>
 					</div>
 				</a>
 			</div>
@@ -150,7 +150,7 @@
 		<!--  -->
 		<script src="./static/docsify-plugin.js"></script>
 		<script>
-			var saTokenTopVersion = '1.33.0-jakarta';	// Sa-Token最新版本
+			var saTokenTopVersion = '1.33.0-jakarta-SNAPSHOT';	// Sa-Token最新版本
 			var name = '<img style="width: 60px; height: 60px; vertical-align: middle;" src="logo.png" alt="logo" /> ';
 			name += '<b style="font-size: 28px; vertical-align: middle;">Sa-Token</b> <sub>v' + saTokenTopVersion + '</sub>';
 			window.$docsify = {
